[package]
name = "key-ownership-prover"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
josekit = "0.10.1"
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
base64 = "0.22"
